# knotes

./: AGENTS.md  README.md  meson.build
data/: knotes.desktop.in  knotes.gresource.xml  knotes.metainfo.xml.in  main_window.blp  meson.build  note_editor_pane.blp  note_list_box.blp  note_row.blp  style.css
data/icons/: meson.build
po/: POTFILES  POTFILES.skip  knotes.pot  pl.po
src/: application.vala  config.vala.in  folder.vala  i18n.vala  main.vala  main_window.vala  meson.build  note.vala  note_list_box.vala  note_repository.vala  tray_manager.vala
src/application/: asset_import_result.vala  folder_service.vala  note_service.vala  notebook_catalog.vala  notebook_service.vala
src/application/editing/: autosave_coordinator.vala  autosave_factory.vala  note_editing_session.vala
src/application/ports/: autosave_scheduler.vala  folder_repository.vala  note_asset_repository.vala  note_repository.vala  notebook_repository.vala
src/application/results/: duplicate_note_result.vala  move_result.vala  rename_folder_result.vala
src/application/services/: note_asset_service.vala
src/application/workspace/: notebook_catalog.vala  notebook_workspace.vala
src/bootstrap/: application_factory.vala  application_services.vala
src/domain/: folder.vala  note.vala
src/infrastructure/json/: folder_json_mapper.vala  json_folder_repository.vala  json_note_asset_repository.vala  json_note_asset_storage.vala  json_note_repository.vala  json_notebook_repository.vala  json_storage_layout.vala  note_json_mapper.vala
src/presentation/editor/: autosave_coordinator.vala  markdown_editor_view.vala  markdown_preview_pane.vala  markdown_renderer.vala  note_asset_import_controller.vala  note_editor_pane.vala
src/presentation/shell/: application.vala
src/presentation/sidebar/: compact_note_row.vala  folder_button_renderer.vala  folder_dialogs.vala  folder_tree_view.vala  move_destination_dialog.vala  note_list_box.vala  note_row.vala  sidebar_command_controller.vala  sidebar_drag_item.vala  sidebar_item_interactions.vala  sidebar_selection_model.vala  sidebar_tree_view.vala
src/presentation/window/: main_window.vala
tests/: json_notebook_repository_test.vala  markdown_renderer_test.vala  markdown_rendering_test.vala  notebook_application_test.vala  sidebar_state_test.vala
vapi/: libmarkdown.vapi
